fixing how-to-map-a-jpa-entity-to-a-view-or-sql-query-using-hibernate project